--- a/DogGo2/Views/Owners/Index.cshtml
+++ b/DogGo2/Views/Owners/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.NeighborhoodId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Phone)
+               @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th></th>
         </tr>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Phone)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
