--- a/DogGo2/Views/Walkers/Details.cshtml
+++ b/DogGo2/Views/Walkers/Details.cshtml
@@ -23,10 +23,16 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayFor(model => model.NeighborhoodId)
+            @Html.DisplayNameFor(model => model.NeighborhoodId)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NeighborhoodId)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Neighborhood)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Neighborhood.Name)
         </dd>
         <dt class = "col-sm-2">
             <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
